--- a/arch/arm64/boot/dts/exynos/exynos8895.dtsi
+++ b/arch/arm64/boot/dts/exynos/exynos8895.dtsi
@@ -517,6 +517,7 @@
 			dm-type = <DM_CPU_CL1>;
 
 			min-freq = <741000>;
+			max-freq = <2652000>;
 
 			/* PM QoS Class ID*/
 			pm_qos-min-class = <5>;
