wake_gestures: sweep2wake, doubletap2wake and sweep2sleep
Adapted for an unified Galaxy S8/S8+ support by Noxxxious

--- a/arch/arm64/configs/custom_defconfig
+++ b/arch/arm64/configs/custom_defconfig
@@ -4,6 +4,7 @@
 #
 ################################################
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_WAKE_GESTURES=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
