--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -103,3 +103,4 @@ obj-$(CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5)	+= Cyttsp5_525a/
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS)	+= sec_ts/
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS_A552)	+= sec_ts_a552/
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS_Y661)	+= sec_ts_y661/
+obj-$(CONFIG_WAKE_GESTURES)		+= wake_gestures.o
