--- a/arch/arm64/boot/dts/exynos/exynos8895.dtsi
+++ b/arch/arm64/boot/dts/exynos/exynos8895.dtsi
@@ -471,6 +471,7 @@
 			dm-type = <DM_CPU_CL0>;
 
 			min-freq = <455000>;
+			max-freq = <1898000>;
 
 			/* PM QoS Class ID*/
 			pm_qos-min-class = <3>;
